--- a/styles.css
+++ b/styles.css
@@ -451,6 +451,8 @@ header nav ul li a:hover {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     row-gap: 1em;
+    width: 85%;
+    margin: auto;
 }
 
 .viewBook input[type="checkbox"] {
