--- a/styles.css
+++ b/styles.css
@@ -449,9 +449,8 @@ header nav ul li a:hover {
 
 .viewBook > div:nth-of-type(3) {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 2fr 1fr;
     row-gap: 1em;
-    padding: 0;
 }
 
 .viewBook input[type="checkbox"] {
