--- a/styles.css
+++ b/styles.css
@@ -449,8 +449,9 @@ header nav ul li a:hover {
 
 .viewBook > div:nth-of-type(3) {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 2.5fr 1fr;
     row-gap: 1em;
+    padding: 0;
 }
 
 .viewBook input[type="checkbox"] {
