--- a/styles.css
+++ b/styles.css
@@ -451,6 +451,7 @@ header nav ul li a:hover {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     row-gap: 1em;
+    place-items: center;
 }
 
 .viewBook input[type="checkbox"] {
